[gd_scene load_steps=5 format=3 uid="uid://cgh0debrlwcy2"]

[ext_resource type="Script" uid="uid://dum2jinj0efs2" path="res://scripts/main_menu.gd" id="1_m625n"]
[ext_resource type="Theme" uid="uid://kidl1abmq23t" path="res://ButtonTexture.tres" id="2_dnha3"]
[ext_resource type="Texture2D" uid="uid://dfpmxsjtuugsg" path="res://Title_Screen.png" id="2_wugcc"]
[ext_resource type="AudioStream" uid="uid://bp0u4wk5whh88" path="res://sounds/music/Mus_BBRKZTitle.mp3" id="3_gtid3"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -9.0
offset_top = -13.0
offset_right = -9.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m625n")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_left = 438.0
offset_top = 403.0
offset_right = 738.0
offset_bottom = 658.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
z_index = 1
layout_mode = 2

[node name="Tutorial_Button" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_dnha3")
text = "Tutorial"

[node name="Song_Select_Button" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_dnha3")
text = "Song Select"

[node name="Quit_Button" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_dnha3")
text = "Peace out!"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(577, 323.5)
scale = Vector2(0.6, 0.599074)
texture = ExtResource("2_wugcc")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_gtid3")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Tutorial_Button" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Song_Select_Button" to="." method="_on_play_demo_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit_Button" to="." method="_on_quit_button_pressed"]
